<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorLightGray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/bg_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="80dp"
                android:src="@drawable/ic_fingerprint" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="48dp"
                android:text="@string/demo_description"
                android:textAlignment="center" />

            <FrameLayout
                android:id="@+id/get_started_button"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:foreground="@drawable/btn_ripple">
                <TextView
                    style="@style/TextAppearance.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_read_more_btn"
                    android:focusable="true"
                    android:paddingVertical="16dp"
                    android:text="@string/get_started_btn_text"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </FrameLayout>

            <TextView
                android:id="@+id/terms_btn"
                android:layout_marginBottom="32dp"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/agreement"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>