<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/id_desc_tv" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:indeterminate="true"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/id_text_view"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginVertical="8dp"
                android:textColor="@color/orange"
                tools:text="f6fc84c9f21c24907d6bee6eec38cabab5fa9a7be8c4a7827fe9e56f245bd2d5" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="4dp"
            android:background="@color/colorLightGray" />

        <TextView
            android:id="@+id/uniqueness_text_view"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:foreground="@drawable/btn_ripple">

                <TextView
                    android:id="@+id/github_button"
                    style="@style/TextAppearance.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_github_btn"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp"
                    android:text="@string/source_code_btn_text"
                    android:textAlignment="center"
                    app:drawableEndCompat="@drawable/ic_github_logo_small" />

            </FrameLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.02" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:foreground="@drawable/btn_ripple">

                <TextView
                    android:id="@+id/read_more_button"
                    style="@style/TextAppearance.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_read_more_btn"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingVertical="8dp"
                    android:text="@string/read_more_txt"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>
